syntax = "proto3";

package db;

import "google/protobuf/timestamp.proto";

option go_package = "./pb";

message User {
  string id = 1;
  string name = 2;
  string login = 3;
  string phone = 4;
  string email = 5;
  bool email_verified = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
  google.protobuf.Timestamp password_changed_at = 9;
}